--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
 
-var allElements = [] // Array of all elements on the pages.
- allElements.push("#game1")
- allElements.push("#game2")
-
-var currentActiveElement = "none"
-
+var numberOfElements = 4; // change this when you add new content.
 
 function reply_click(clicked_id)
 {
  // $("#" + currentActiveElement).fadeOut(); // fades out all elements in case multiple are open.
+    for (var i = 1; i <= numberOfElements; i++)
+    {
+     $("#gamewindow_" + i).fadeOut();  // loops through and fades all of them out.
+    }
 
 
     var getID = "#gamewindow_" + ((clicked_id).split("_"))[1] 
@@ -77,7 +76,7 @@ function reply_click(clicked_id)
     $("#game2").fadeIn();
     $("#game2").fadeIn("slow");
     $("#game2").fadeIn(3000);
-  });
+  });alert("I am an alert box!");
 });
 */
 
