--- a/index.html
+++ b/index.html
@@ -52,33 +52,6 @@ function reply_click(clicked_id)
 
 }
 
-/*
-  $(document).ready(function(){
-  $("#gameProj1").click(function(){
-
-    for(var i = 0; i < allElements.length; i++)
-    {
-      $(allElements[i]).fadeOut();
-    }
-
-    $("#game1").fadeIn();
-    $("#game1").fadeIn("slow");
-    $("#game1").fadeIn(3000);
-    
-  });
-  $("#gameProj2").click(function(){
-
-      for(var i = 0; i < allElements.length; i++)
-    {
-      $(allElements[i]).fadeOut();
-    }
-
-    $("#game2").fadeIn();
-    $("#game2").fadeIn("slow");
-    $("#game2").fadeIn(3000);
-  });alert("I am an alert box!");
-});
-*/
 
 </script>
 </head>
@@ -86,6 +59,45 @@ function reply_click(clicked_id)
 <body>
 
 <!-- jQuery through CDN, currently using 1.8.3 -->
+
+
+
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Game Projects</a></li>
+          <li><a href="#">Other Projects</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Blog</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </nav>
+
+
+
+<!-- 
 
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -104,6 +116,9 @@ function reply_click(clicked_id)
     </div>
   </div>
 </nav>
+
+-->
+
 
 <div class="jumbotron"> <br>
 
