--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ function reply_click(clicked_id)
 <!-- jQuery through CDN, currently using 1.8.3 -->
 
 
-
+<div class="container">
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -94,6 +94,7 @@ function reply_click(clicked_id)
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
+    </div>
 
 
 
