--- a/index.html
+++ b/index.html
@@ -58,11 +58,8 @@ function reply_click(clicked_id)
 
 <body>
 
-<!-- jQuery through CDN, currently using 1.8.3 -->
-
-
 <div class="container">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -74,6 +71,46 @@ function reply_click(clicked_id)
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </nav>
+<h1>Home</h1>
+
+ </div>
+
+
+<!-- jQuery through CDN, currently using 1.8.3 -->
+<!-- 
+
+<div class="container">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
+   
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
           <li><a href="#">About</a></li>
@@ -92,11 +129,11 @@ function reply_click(clicked_id)
             </ul>
           </li>
         </ul>
-      </div><!-- /.navbar-collapse -->
+      </div>
     </nav>
     </div>
 
-
+-->
 
 <!-- 
 
