Fixed the drop down.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <title>Jason Chiu</title>
 <script>
 
-var numberOfElements = 4; // change this when you add new content.
+var numberOfElements = 9; // change this when you add new content.
 
 function reply_click(clicked_id)
 {
@@ -76,7 +76,7 @@ function reply_click(clicked_id)
         <ul class="nav navbar-nav">
           <li><a href="#">About</a></li>        
           <li class="dropdown">
-            <a href="#gameproj" class="dropdown-toggle" data-toggle="dropdown">Game Projects<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Game Projects<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_1" >Project: Blood</a></li>
               <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_2" >Food Run</a></li>
@@ -87,7 +87,7 @@ function reply_click(clicked_id)
             </ul>
           </li>
         <li class="dropdown">
-          <a href="#otherproj" class="dropdown-toggle" data-toggle="dropdown">Other Work<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Work<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#otherproj" onClick="reply_click(this.id)" id="other_1" >HackUCI</a></li>
               <li><a href="#otherproj" onClick="reply_click(this.id)" id="other_2" >VGDC </a></li>
