Fixed more of the nav bar.
navigation and windows work now as intended

--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@ function reply_click(clicked_id)
               <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_2" >Food Run</a></li>
               <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_3" >On with the Show!</a></li>
               <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_4" >PainBuddy</a></li>
-              <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_5" >Loki</a></li>
-              <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_6" >Temple Zal</a></li>
+              <li><a href="#gameproj2" onClick="reply_click(this.id)" id="game_5" >Loki</a></li>
+              <li><a href="#gameproj2" onClick="reply_click(this.id)" id="game_6" >Temple Zal</a></li>
             </ul>
           </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Work<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#otherproj" onClick="reply_click(this.id)" id="other_1" >HackUCI</a></li>
-              <li><a href="#otherproj" onClick="reply_click(this.id)" id="other_2" >VGDC </a></li>
-              <li><a href="#otherproj" onClick="reply_click(this.id)" id="other_3" >ReadyForce</a></li>
+              <li><a href="#otherproj" onClick="reply_click(this.id)" id="game_7" >HackUCI</a></li>
+              <li><a href="#otherproj" onClick="reply_click(this.id)" id="game_8" >VGDC </a></li>
+              <li><a href="#otherproj" onClick="reply_click(this.id)" id="game_9" >ReadyForce</a></li>
             </ul>
           </li>
           <li><a href="#resume">Resume</a></li>
