--- a/testIndex.html
+++ b/testIndex.html
@@ -9,7 +9,7 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" media="screen" href="test.css"/>
+  <link rel="stylesheet" href="test.css"/>
 </head>
 
 
