Cleaned up repo.
In addition, testing out an image asset from other repo.

Adding a temporary img file to verify it works.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ function reply_click(clicked_id)
     </div>
   <div class="col-xs-12 col-md-3">
     <a href="#gameproj" class="thumbnail" onClick="reply_click(this.id)" id="game_3" >
-      <img src="images/moreready.jpg" alt="...">
+     c
           </a>
         <div class="caption">
           <h3>Project: On with the Show! </h3>
@@ -317,6 +317,15 @@ function reply_click(clicked_id)
 </div>
 </div>
 
+
+
+<div>
+
+    <p>Testing some other images from the server so we can use them </p>
+
+   <img src="http://foreza.github.io/Shopkeeper/CodeRoosevelt/jasonTeachin!.jpg" alt="...">
+<!-- this is an attempt to save space on the repo, may come in handy later -->
+</div>
 
 
 
