--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
       <!-- Website title -->
 <!-- -->
   <title>Jason Chiu</title>
-<script>
 
+
+<script>
+/*
 var numberOfElements = 9; // change this when you add new content.
 
 function reply_click(clicked_id)
@@ -49,7 +51,7 @@ function reply_click(clicked_id)
     $(getID).fadeIn(3000);
 
 }
-
+*/
 
 </script>
 </head>
@@ -126,7 +128,7 @@ function reply_click(clicked_id)
 <div class="row">
   <div class="col-xs-12 col-md-3">
     <a id="game_1" href="#gameproj" class="thumbnail" onClick="reply_click(this.id)">
-      <img src="images/hackLogo.jpg" alt="...">
+      <img src="images/projectblood.jpg" alt="...">
           </a>
         <div class="caption">
           <h3>Project: Blood</h3>
@@ -135,7 +137,7 @@ function reply_click(clicked_id)
   </div>
 <div class="col-xs-12 col-md-3">
     <a id="game_2" href="#gameproj" class="thumbnail" onClick="reply_click(this.id)">
-      <img src="images/vgdc.jpg" alt="...">
+      <img src="images/foodRun.jpg" alt="...">
           </a>
         <div class="caption">
           <h3>Project: Food Run</h3>
@@ -144,7 +146,7 @@ function reply_click(clicked_id)
     </div>
   <div class="col-xs-12 col-md-3">
     <a href="#gameproj" class="thumbnail" onClick="reply_click(this.id)" id="game_3" >
-     c
+      <img src="images/onwiththeshow.png" alt="...">
           </a>
         <div class="caption">
           <h3>Project: On with the Show! </h3>
@@ -163,10 +165,10 @@ function reply_click(clicked_id)
 </div>
 </div>
 
-
+<!--
 <div class="well well-sm">
 <div class="container">
-<div id="gamewindow_1" class="row descBox" style= "display:none; background-color:red;" > <!-- style= "display:none; background-color:red;" -->
+<div id="gamewindow_1" class="row descBox" style= "display:none; background-color:red;" > 
  <h3>THIS IS PROJECT BLOOD</h3>
 
  <p> and this is a placeholder for more content, imags, and happiness </p>
@@ -180,7 +182,7 @@ function reply_click(clicked_id)
 
 </div>
 
-<div id="gamewindow_3" class="row descBox" style= "display:none; background-color:green;" > <!-- style= "display:none; background-color:red;" -->
+<div id="gamewindow_3" class="row descBox" style= "display:none; background-color:green;" >
  <h3>THIS IS PROJECT On with the show!</h3>
 
  <p> and this is a placeholder for more content, imags, and happiness </p>
@@ -195,6 +197,7 @@ function reply_click(clicked_id)
 </div>
 </div>
 </div>
+-->
 
 
 <div id="gameproj2" class="bogus"> <!-- using this to push down the page -->
@@ -214,7 +217,7 @@ function reply_click(clicked_id)
   </div>
 <div class="col-xs-12 col-md-3">
     <a href="#gameproj2" class="thumbnail" onClick="reply_click(this.id)" id="game_6" >
-      <img src="images/vgdc.jpg" alt="...">
+      <img src="images/temple-zal.png" alt="...">
           </a>
         <div class="caption">
           <h3>Temple Zal</h3>
@@ -227,9 +230,11 @@ function reply_click(clicked_id)
 </div>
 </div>
 
+<!--
+
 <div class="well well-sm">
 <div class="container">
-<div id="gamewindow_5" class="row descBox" style= "display:none; background-color:yellow;" > <!-- style= "display:none; background-color:red;" -->
+<div id="gamewindow_5" class="row descBox" style= "display:none; background-color:yellow;" > 
  <h3>THIS IS PROJECT Loki</h3>
 
  <p> and this is a placeholder for more content, imags, and happiness </p>
@@ -245,7 +250,7 @@ function reply_click(clicked_id)
 </div>
 </div>
 
-
+-->
 
 <div  id="otherproj" class="bogus"> <!-- using this to push down the page -->
 </div>
@@ -289,9 +294,10 @@ function reply_click(clicked_id)
 </div>
 </div>
 
+<!-- 
 <div class="well well-sm">
 <div class="container">
-<div id="gamewindow_7" class="row descBox" style= "display:none; background-color:yellow;" > <!-- style= "display:none; background-color:red;" -->
+<div id="gamewindow_7" class="row descBox" style= "display:none; background-color:yellow;" > 
  <h3>THIS IS hackuci</h3>
 
  <p> and this is a placeholder for more content, imags, and happiness
@@ -307,7 +313,7 @@ function reply_click(clicked_id)
 
 </div>
 
-<div id="gamewindow_9" class="row descBox" style= "display:none; background-color:yellow;" > <!-- style= "display:none; background-color:red;" -->
+<div id="gamewindow_9" class="row descBox" style= "display:none; background-color:yellow;" > 
  <h3>THIS IS readyforce</h3>
 
  <p> and this is a placeholder for more content, imags, and happiness
@@ -317,16 +323,18 @@ function reply_click(clicked_id)
 </div>
 </div>
 
+-->
 
 
+<!-- this is an attempt to save space on the repo, may come in handy later 
 <div>
 
     <p>Testing some other images from the server so we can use them </p>
 
    <img src="http://foreza.github.io/Shopkeeper/CodeRoosevelt/jasonTeachin!.jpg" alt="...">
-<!-- this is an attempt to save space on the repo, may come in handy later -->
-</div>
 
+</div>
+-->
 
 
 <div class="bogus"> <!-- using this to push down the page -->
