Added a test project page for blood
made a decision to keep my game projects to 4 of my best, rather than
showing what i have freshman year

--- a/projectPages/blood.html
+++ b/projectPages/blood.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="jason.css"/>
       <!-- Website title -->
 <!-- -->
-  <title>Jason Chiu</title>
+  <title>Jason Chiu - Project Blood</title>
 
 
 <script>
@@ -80,21 +80,21 @@ function reply_click(clicked_id)
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Game Projects<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="projectPages/blood.html" onClick="reply_click(this.id)" id="game_1" >Project: Blood</a></li>
-              <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_2" >Food Run</a></li>
-              <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_3" >On with the Show!</a></li>
-              <li><a href="#gameproj" onClick="reply_click(this.id)" id="game_4" >PainBuddy</a></li>
+              <li><a href="#" onClick="reply_click(this.id)" id="game_1" >Project: Blood</a></li>
+              <li><a href="#" onClick="reply_click(this.id)" id="game_2" >Food Run</a></li>
+              <li><a href="#" onClick="reply_click(this.id)" id="game_3" >On with the Show!</a></li>
+              <li><a href="#" onClick="reply_click(this.id)" id="game_4" >PainBuddy</a></li>
             </ul>
           </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Work<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#otherproj" onClick="reply_click(this.id)" id="game_7" >HackUCI</a></li>
-              <li><a href="#otherproj" onClick="reply_click(this.id)" id="game_8" >VGDC </a></li>
-              <li><a href="#otherproj" onClick="reply_click(this.id)" id="other_3" >ReadyForce</a></li>
+              <li><a href="#" onClick="reply_click(this.id)" id="game_7" >HackUCI</a></li>
+              <li><a href="#" onClick="reply_click(this.id)" id="game_8" >VGDC </a></li>
+              <li><a href="#" onClick="reply_click(this.id)" id="other_3" >ReadyForce</a></li>
             </ul>
           </li>
-          <li><a href="#resume">Resume</a></li>
+          <li><a href="#">Resume</a></li>
           <li><a href="https://medium.com/@jasonchiu">Blog</a></li>
         </ul>
       </div>
@@ -111,8 +111,7 @@ function reply_click(clicked_id)
     <div class="col-xs-12 col-md-8"> <!-- Info Div -->
      <h1 id="centerSmall">I'm Jason!</h1>
       <p id="centerSmall">
-        Passionate developer. Serious gamer. <br>
-        Check out what I have below.
+        project blood sample pages
       </p>
     </div> 
    </div>
