Added fun roles!

--- a/funApp/graveyard_jason.html
+++ b/funApp/graveyard_jason.html
@@ -126,9 +126,11 @@ function play(){
      <div class="row center">
         <h5 class="header col s12 light"><b>Credits:</b></h5> <br>
         <p> <ul>
-        <li>Jason Chiu - Developer</li>
-          <li>Jim To - Inspiration</li>
-          <li>Ren Hung - Executioner</li>
+        <li>Jason Chiu - Lead Developer</li>
+          <li>Jim To - Assistant Producer</li>
+          <li>Ren Hung - Producer</li>
+          <li>Andrew Sy - Creative Director</li>
+          <li>Andrew Ooi - Network Ops</li>
         </ul></p>
       </div>
 
