--- a/funApp/graveyard_jason.html
+++ b/funApp/graveyard_jason.html
@@ -160,7 +160,7 @@ function play(){
     <div class="container">
       <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo">Death Counter</a>
         <ul id="nav-mobile" class="right side-nav">
-          <li><a href="http://jasonthechiu.com">Back to Projects</a></li>
+          <li><a href="../index.html">Back to Projects</a></li>
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       </div>
     </div>
