--- a/projectPages/blood.html
+++ b/projectPages/blood.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="footerGem">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Project: Blood</title>
-
+  <title>Jason Chiu: Projects</title>
   <!-- CSS  -->
-  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-
+<!-- angular JS for ease of footer -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+     <script type="text/javascript" src="../footer.js"></script>
 </head>
 <body class="grey lighten-2" >
 
@@ -114,35 +115,29 @@
     </div>
   </div>
 
-<footer class="grey darken-4">
+<footer ng-controller="FooterController as footer" class="grey darken-4">
     <div class="container">
       <div class="row">
         <div class="col l10 s12">
-          <h5 class="white-text">About Jason:</h5>
+          <h5 class="white-text">About Jason: </h5>
           <p class="grey-text text-darken-2">
-            I'm a 3rd year student at the University of California, Irvine, and expect to graduate in the summer 2016. <br>
-            I've worked on numerous game projects. I currently serve as Vice President of the Video Game Development Club (VGDC) at UCI. <br>
-            I've picked up web development through participating in hackathons and app jams; and made this website to showcase my work. 
-            <br>
-             My tools used include Materialize (check below!), github for hosting, HTML/CSS/Javascript as languages, and Firebase for stats-tracking and for easier client-side development.
-
+          {{footer.data.footerText1}} <br>  
+          {{footer.data.footerText2}} <br>
+          {{footer.data.footerText3}} <br>
+          {{footer.data.footerText4}} <br>
           </p>
         </div>
-
         <div class="col l2 s12">
           <h5 class="white-text">Find me on..</h5>
           <p class="grey-text text-darken-2">
            <ul>
-           <li><a href="https://www.linkedin.com/in/jasonthechiu">LinkedIn</a></li>
-           <li><a href="https://github.com/foreza">GitHub</a></li>
-           <li><a href="https://medium.com/@jasonchiu">Medium</a></li>
-           <li><a href="https://www.facebook.com/dizzyKey">Facebook</a></li>
+           <li><a ng-href="{{footer.data.link1}}"> {{footer.data.name1}} </a></li>
+           <li><a ng-href="{{footer.data.link2}}"> {{footer.data.name2}} </a></li>
+           <li><a ng-href="{{footer.data.link3}}"> {{footer.data.name3}} </a></li>
+           <li><a ng-href="{{footer.data.link4}}"> {{footer.data.name4}} </a></li>
            </ul>
-
           </p>
         </div>
-        
-      
       </div>
     </div>
     <div class="footer-copyright">
