Added more placeholders.

--- a/clubsOrgs.html
+++ b/clubsOrgs.html
@@ -31,7 +31,7 @@
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <h1 class="header center grey-text">CLUBS AND ORGS</h1>
-      <p> Below are game projects that I have worked on. Click on each one to view more information/download/play the game. </p>
+      <p> Check out the organizations I'm proud to lead and be a part of.</p>
 
       <table class="hoverable">
         <thead>
@@ -44,10 +44,10 @@
 
         <tbody>
           <tr>
-          <td><h5>Project Blood</h5><img class="responsive-img" src="images/projectblood.png"></td>
+          <td><h5>Video Game Development Club @ UCI</h5><img class="responsive-img" src="images/vgdc.jpg"></td>
           <td></td>
           <td>A sample description that tells me something about the project that hopefully will not exceed two lines!
-          <br>A sample description that tells me something about the project that hopefully will not exceed two lines! <br><br>
+          <br>A sample description that tells me something about the project that hopefully will not exceed two lines! History. <br><br>
 <a href="projectPages/blood.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a>
 
 
@@ -55,19 +55,13 @@
           <td></td>
            </tr>
           <tr>
-            <td><h5>FoodRun</h5><img class="responsive-img" src="images/foodRun.jpg"></td>
+            <td><h5>Taiwanese American Organization</h5><img class="responsive-img" src="images/tao.jpg"></td>
             <td></td>
             <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
             <br><br>
 <a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a></td>
           </tr>
-          <tr>
-            <td><h5>On with the Show</h5><img class="responsive-img" src="images/onwiththeshow.png"></td>
-            <td></td>
-            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
-            <br><br>
-<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a></td>
-          </tr>
+        
         </tbody>
       </table>
             
