--- a/projectsOther.html
+++ b/projectsOther.html
@@ -32,8 +32,8 @@
 
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <h1 class="header center grey-text">OTHER PROJECTS/WORK/VOLUNTEERING</h1>
-      <p> Below are game projects that I have worked on. Click on each one to view more information/download/play the game. </p>
+      <h1 class="header center grey-text">OTHER PROJECTS/WORK</h1>
+      <p> Below are other projects that I have worked on. Click on each one to view more information. </p>
 
       <table class="hoverable">
         <thead>
@@ -46,30 +46,39 @@
 
         <tbody>
           <tr>
-          <td><h5>Project Blood</h5><img class="responsive-img" src="images/projectblood.png"></td>
+          <td><h5>ReadyForce</h5><img class="responsive-img" src="images/readyforce.jpg"></td>
           <td></td>
           <td>A sample description that tells me something about the project that hopefully will not exceed two lines!
           <br>A sample description that tells me something about the project that hopefully will not exceed two lines! <br><br>
-<a href="projectPages/blood.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a>
+          </td>
+          <td></td>
+           </tr>
+          <tr>
+            <td><h5>HackUCI</h5><img class="responsive-img" src="images/hackLogo.jpg"></td>
+            <td></td>
+            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
+            <br><br>
+          </tr>
+          <tr>
+            <td><h5>Calplug - Painbuddy</h5><img class="responsive-img" src="images/onwiththeshow.png"></td>
+            <td></td>
+            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
+            <br><br>
+<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light red">View PainBuddy Page</a></td>
+          </tr>
+
+          <tr>
+          <td><h5>Code:Roosevelt</h5><img class="responsive-img" src="images/jason2.jpg"></td>
+          <td></td>
+          <td>A sample description that tells me something about the project that hopefully will not exceed two lines!
+          <br>A sample description that tells me something about the project that hopefully will not exceed two lines! <br><br>
+<a href="projectPages/blood.html" id="download-button" class="btn-large waves-effect waves-light red">Learn more about Hacker:Fund.</a>
 
 
           </td>
           <td></td>
            </tr>
-          <tr>
-            <td><h5>FoodRun</h5><img class="responsive-img" src="images/foodRun.jpg"></td>
-            <td></td>
-            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
-            <br><br>
-<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a></td>
-          </tr>
-          <tr>
-            <td><h5>On with the Show</h5><img class="responsive-img" src="images/onwiththeshow.png"></td>
-            <td></td>
-            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
-            <br><br>
-<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a></td>
-          </tr>
+
         </tbody>
       </table>
             
