--- a/clubsOrgs.html
+++ b/clubsOrgs.html
@@ -7,22 +7,18 @@
   <!-- CSS  -->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
-<!-- angular JS for ease of footer -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
-     <script type="text/javascript" src="footer.js"></script>
 </head>
+
 <body class="grey lighten-2" >
 
-<!-- Navigation -->
-  <nav class="grey darken-4" role="navigation">
-    <div class="container">
-      <div class="nav-wrapper"><a id="logo-container" href="index.html" class="brand-logo">Jason Chiu</a>
+<nav class="grey darken-4" role="navigation" ng-controller="FooterController as nava">    
+  <div class="container">
+      <div class="nav-wrapper"><a id="logo-container" ng-href="{{nava.nav.nav1Link}}" class="brand-logo">{{nava.nav.nav1Name}}</a>
         <ul id="nav-mobile" class="right side-nav">
-          <li><a href="projects.html">Game Projects</a></li>
-           <li><a href="projectsOther.html">Other Projects/Work</a></li>
-           <li><a href="#">Clubs/Orgs</a></li>
-             <li><a href="#resumeModal" id="download-button" class="waves-effect modal-trigger">Resume</a></li>
+          <li><a ng-href="{{nava.nav.nav2Link}}">{{nava.nav.nav2Name}}</a></li>
+           <li><a ng-href="{{nava.nav.nav3Link}}">{{nava.nav.nav3Name}}</a></li>
+           <li><a ng-href="{{nava.nav.nav4Link}}">{{nava.nav.nav4Name}}</a></li>
+            <li><a ng-href="{{nava.resumeLink}}">Resume</a></li>
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       </div>
     </div>
@@ -31,14 +27,13 @@
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <h1 class="header center grey-text">CLUBS AND ORGS</h1>
-      <p> Check out the organizations I'm proud to lead and be a part of.</p>
 
       <table class="hoverable">
         <thead>
           <tr>
-              <th data-field="id">Project Name</th>
+              <th data-field="id">Club Name</th>
               <th data-field="id"></th> <!-- Placeholder -->
-              <th data-field="name">Summary</th>
+              <th data-field="name">Info</th>
           </tr>
         </thead>
 
@@ -48,18 +43,18 @@
           <td></td>
           <td>A sample description that tells me something about the project that hopefully will not exceed two lines!
           <br>A sample description that tells me something about the project that hopefully will not exceed two lines! History. <br><br>
-<a href="projectPages/blood.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a>
+<a href="http://vgdc-uci.com/" id="download-button" class="btn-large waves-effect waves-light blue">VISIT VGDC @ VGDC-UCI.COM</a>
 
 
           </td>
           <td></td>
            </tr>
           <tr>
-            <td><h5>Taiwanese American Organization</h5><img class="responsive-img" src="images/tao.jpg"></td>
+            <td><h5>Taiwanese American Org. @ UCI</h5><img class="responsive-img" src="images/taouci.png"></td>
             <td></td>
             <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
             <br><br>
-<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a></td>
+<a href="http://www.taouci.com" id="download-button" class="btn-large waves-effect waves-light blue">VISIT TAO @ TAOUCI.COM</a></td>
           </tr>
         
         </tbody>
@@ -116,27 +111,10 @@
   </footer>
 
   <!--  Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+  <script type="text/javascript" src="footer.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-
-  <script type="text/javascript">
-    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-  
-  $(document).ready(function(){
-     $('ul.tabs').tabs(); // initialize tabs.
-    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-    $('.modal-trigger').leanModal();
-  });
-
-
-         function changeImage(img){
-                  document.getElementById('bigImage').src=img;
-                }
-            </script>
-          
-          </script>
-
   </body>
 </html>
