--- a/projects.html
+++ b/projects.html
@@ -7,33 +7,28 @@
   <!-- CSS  -->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
-<!-- angular JS for ease of footer -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
-     <script type="text/javascript" src="footer.js"></script>
 </head>
+
 <body class="grey lighten-2" >
 
-<!-- Navigation -->
-  <nav class="grey darken-4" role="navigation">
-    <div class="container">
-      <div class="nav-wrapper"><a id="logo-container" href="index.html" class="brand-logo">Jason Chiu</a>
+<nav class="grey darken-4" role="navigation" ng-controller="FooterController as nava">    
+  <div class="container">
+      <div class="nav-wrapper"><a id="logo-container" ng-href="{{nava.nav.nav1Link}}" class="brand-logo">{{nava.nav.nav1Name}}</a>
         <ul id="nav-mobile" class="right side-nav">
-          <li><a href="#">Game Projects</a></li>
-           <li><a href="projectsOther.html">Other Projects/Work</a></li>
-           <li><a href="clubsOrgs.html">Clubs/Orgs</a></li>
-             <li><a href="#resumeModal" id="download-button" class="waves-effect modal-trigger">Resume</a></li>
+          <li><a ng-href="{{nava.nav.nav2Link}}">{{nava.nav.nav2Name}}</a></li>
+           <li><a ng-href="{{nava.nav.nav3Link}}">{{nava.nav.nav3Name}}</a></li>
+           <li><a ng-href="{{nava.nav.nav4Link}}">{{nava.nav.nav4Name}}</a></li>
+            <li><a ng-href="{{nava.resumeLink}}">Resume</a></li>
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       </div>
     </div>
   </nav>
 
 
-
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <h1 class="header center grey-text">GAME PROJECTS</h1>
-      <p> Below are game projects that I have worked on. Click on each one to view more information/download/play the game. </p>
+
 
       <table class="hoverable">
         <thead>
@@ -46,29 +41,29 @@
 
         <tbody>
           <tr>
-          <td><h5>Project Blood</h5><img class="responsive-img" src="images/projectblood.png"></td>
+          <td><h5>Project Blood - 2014</h5><img class="responsive-img" src="images/projectblood.png"></td>
           <td></td>
-          <td>A sample description that tells me something about the project that hopefully will not exceed two lines!
-          <br>A sample description that tells me something about the project that hopefully will not exceed two lines! <br><br>
-<a href="projectPages/blood.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a>
+          <td>A stealth rogue-like crawler featuring a vampire as he takes on contracts to kill.
+          <br>Developed/written in Unity/C#, with use of Tiled2D. <br><br>
+<a href="projectPages/blood.html" id="download-button" class="btn-large waves-effect waves-light grey">View Project Blood Page</a>
 
 
           </td>
           <td></td>
            </tr>
           <tr>
-            <td><h5>FoodRun</h5><img class="responsive-img" src="images/foodRun.jpg"></td>
+            <td><h5>FoodRun - 2014</h5><img class="responsive-img" src="images/foodRun.jpg"></td>
             <td></td>
-            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
+            <td>A food-fighting game where tomatoes are thrown, and where playing with food takes on a whole new meaning. <br>Developed/written in Python, using the Pygame library.
             <br><br>
-<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a></td>
+<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light grey">View FoodRun Page</a></td>
           </tr>
           <tr>
-            <td><h5>On with the Show</h5><img class="responsive-img" src="images/onwiththeshow.png"></td>
+            <td><h5>"On with the Show!" - 2013</h5><img class="responsive-img" src="images/onwiththeshow.png"></td>
             <td></td>
-            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
+            <td>A puzzle platformer where the magician takes on an ardous task of bringing back color to the world.<br>Developed in C# XNA.
             <br><br>
-<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light red">View Project Blood Project Page</a></td>
+<a href="projectPages/onwiththeshow.html" id="download-button" class="btn-large waves-effect waves-light grey">View "On with the Show!""
           </tr>
         </tbody>
       </table>
@@ -125,27 +120,10 @@
 
 
   <!--  Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+  <script type="text/javascript" src="footer.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-
-  <script type="text/javascript">
-    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-  
-  $(document).ready(function(){
-     $('ul.tabs').tabs(); // initialize tabs.
-    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-    $('.modal-trigger').leanModal();
-  });
-
-
-         function changeImage(img){
-                  document.getElementById('bigImage').src=img;
-                }
-            </script>
-          
-          </script>
-
   </body>
 </html>
