Added more to on with the show.
Will use this as a base page for my projects.

--- a/projectPages/onwiththeshow.html
+++ b/projectPages/onwiththeshow.html
@@ -27,7 +27,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center black-text">"On with the Show!"</h1>
+      <h1 class="header center black-text">"On With the Show!"</h1>
         <div class="row center">
         
             <div class="section">
@@ -37,20 +37,20 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center"> <img class="responsive-img " src="../images/onwiththeshow.png"></h2>
-            <h5 class="center">Stealth Elements.</h5>
+            <h5 class="center">A display of magic.</h5>
           </div>
         </div>
         <div class="col s12 m4">
           <div class="icon-block hide-on-small-only">
              <h2 class="center"> <img class="responsive-img " src="../images/projectblood.png"></h2>
-            <h5 class="center">Realistic Lighting, Shadows.</h5>
+            <h5 class="center">Minigames included.</h5>
 
           </div>
         </div>
         <div class="col s12 m4">
           <div class="icon-block hide-on-small-only">
              <h2 class="center"> <img class="responsive-img " src="../images/projectblood.png"></h2>
-            <h5 class="center">One shot, one kill.</h5>
+            <h5 class="center">Try not to perish.</h5>
           </div>
         </div>
       </div>
@@ -70,7 +70,11 @@
     <h4>Play/Download "On with the Show!</h4>
     <p>
  <br>
-    Grab the latest build here:</p>
+    Grab the build here: <br>
+
+    Grab dependencies (required to run the game!) here: <br>
+
+    </p>
 
     <a href="#modal1" class="waves-effect btn-flat modal-close">Back</a>
   </div>
@@ -81,10 +85,31 @@
         <h5 class="header col s12 light">The world has dimmed. Argo must be overthrown...</h5> <br>
         <p> In "On With the Show", the player will direct the Magician to explore a grey, dark world, and bring forth joy and color by solving puzzles through teleportation magic. <br>The player will use magic to conjure items back and forth to navigate the level and solve puzzles! <br>
         The magician will transform the world as he interacts with it. <br>
-        Teleportation is explored as a core element in "On With the Show". The game emphasizes the use of teleportation to change the world around you. </p>
+        Teleportation is explored as a core element in "On With the Show". <br>The game emphasizes the use of teleportation to change the world around you. </p>
+
+        "On With the Show" was developed in C# XNA.
       </div>
       </blockquote>
+  <div class="row">
+
+        <h5>My Role:</h5>
+ <p class="light">
+
+ I was a designer on the team. I wrote the backstory and specified the setting of the game, created background art assets, and designed several skills of the Magician. I also organized a sound library of all the audio assets we plugged into the game, and playtested for/reported bugs in the game.
+
+
+  
+ </p>
+
+</div>
+
+
+
+
+
+
       <div class="row">
+
 
   <h5>Controls:</h5>
  <p class="light">
