Updated resume, added more content to foodrun

--- a/projectPages/onwiththeshow.html
+++ b/projectPages/onwiththeshow.html
@@ -95,7 +95,9 @@
         <h5>My Role:</h5>
  <p class="light">
 
- I was a designer on the team. I wrote the backstory and specified the setting of the game, created background art assets, and designed several skills of the Magician. I also organized a sound library of all the audio assets we plugged into the game, and playtested for/reported bugs in the game.
+ I was a designer on the team. I wrote the backstory and specified the setting of the game, created background art assets, and designed several skills of the Magician. I also organized a sound library of all the audio assets we plugged into the game, and playtested for/reported bugs in the game.<br>
+
+ The game ended up being awarded 2nd place in the Winter Game Jam of 2014.
 
 
   
